PORTAL: Start page layout modified

--- a/projects/portal/src/app/portal/components/start/start.component.html
+++ b/projects/portal/src/app/portal/components/start/start.component.html
@@ -65,42 +65,51 @@
           <!-- Start: Сервисы -->
           <div class="services">
 
-            <div class="service ukitasu">
-              <div class="service-icon">
-                <mat-icon>print</mat-icon>
-              </div>
-              <div class="service-caption">Заявки УКиТАСУ</div>
-            </div>
-
-            <div class="service auto">
-              <div class="service-caption">Заявки на транспорт</div>
-              <div class="service-icon">
-                <!--<mat-icon>directions_car</mat-icon>-->
-                <img src="/assets/car.png" alt="">
+            <div class="row">
+              <div class="col-12 col-md-4 col-lg-6">
+                <div class="service ukitasu">
+                  <div class="service-caption">Заявки УКиТАСУ</div>
+                  <div class="service-icon">
+                    <img src="/assets/printer.png">
+                  </div>
+                </div>
               </div>
 
-            </div>
-
-            <div class="service aho">
-              <div class="service-icon">
-                <!-- <mat-icon>directions_car</mat-icon> -->
-                <img src="/assets/bulb.png" alt="">
+              <div class="col-12 col-md-4 col-lg-6">
+                <div class="service auto">
+                  <div class="service-caption">Заявки на транспорт</div>
+                  <div class="service-icon">
+                    <img src="/assets/car.png" alt="">
+                  </div>
+                </div>
               </div>
-              <div class="service-caption">Заявки АХО</div>
-            </div>
 
-            <div class="service phone-book">
-              <div class="service-icon">
-                <mat-icon>phone</mat-icon>
+              <div class="col-12 col-md-4 col-lg-6">
+                <div class="service aho">
+                  <div class="service-caption">Заявки на транспорт</div>
+                  <div class="service-icon">
+                    <img src="/assets/bulb.png">
+                  </div>
+                </div>
               </div>
-              <div class="service-caption">Телефонный справочник</div>
-            </div>
 
-            <div class="service">
-              <div class="service-icon">
-                <mat-icon>attach_money</mat-icon>
+              <div class="col-12 col-md-4 col-lg-6">
+                <div class="service phone-book">
+                  <div class="service-caption">Телефонный справочник</div>
+                  <div class="service-icon">
+                    <img src="/assets/bulb.png">
+                  </div>
+                </div>
               </div>
-              <div class="service-caption">Расчетные листки</div>
+
+              <div class="col-12 col-md-4 col-lg-6">
+                <div class="service">
+                  <div class="service-icon">
+                    <mat-icon>attach_money</mat-icon>
+                  </div>
+                  <div class="service-caption">Расчетные листки</div>
+                </div>
+              </div>
             </div>
 
           </div>
