PORTAL: start page layout modified

--- a/projects/portal/src/app/portal/components/portal/portal.component.html
+++ b/projects/portal/src/app/portal/components/portal/portal.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div id="app-content">
+  <div id="app-content mb-4">
     <router-outlet></router-outlet>
   </div>
 </div>
