--- a/projects/portal/src/styles.less
+++ b/projects/portal/src/styles.less
@@ -2,3 +2,5 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import './styles/common';
 @import './styles/articles';
+@import './styles/switcher';
+@import './styles/employee-list';
