PORTAL: start page layout modified

--- a/projects/portal/src/styles.less
+++ b/projects/portal/src/styles.less
@@ -4,3 +4,6 @@
 @import './styles/articles';
 @import './styles/switcher';
 @import './styles/employee-list';
+@import './styles/carousel';
+@import './styles/services';
+@import './styles/our-people-section';
