--- a/projects/portal/src/app/portal/components/start/start.component.less
+++ b/projects/portal/src/app/portal/components/start/start.component.less
@@ -11,7 +11,65 @@
     &.people {
       border-top: 1px dotted #eeeeee;
     }
+
+    &.separator {
+      & > div {
+        border-top: 1px dotted #eeeeee;
+        .mat-icon {
+          width: 42px;
+          margin-top: -12px;
+          text-align: center;
+          color: #f5f5f5;
+          background: white;
+        }
+      }
+    }
   }
+
+
+  #phone-book-search {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 45px;
+    margin-bottom: 10px;
+
+    .prefix {
+      width: 50px;
+      height: 45px;
+      background: #eceff1;
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+
+      .mat-icon {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 45px;
+        font-size: 25px;
+        color: #b0bec5;
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+      }
+    }
+
+    input[type='text'] {
+      height: 45px;
+      padding: 7px 10px 7px 0px;
+      font-family: 'Comfortaa', cursive;
+      font-size: 14px;
+      font-weight: 300;
+      text-overflow: ellipsis;
+      border: none;
+      border-radius: 4px;
+      background: #eceff1;
+    }
+  }
+
+
 
   #phone-book-search {
     display: flex;
@@ -63,7 +121,7 @@
       font-size: 16px;
       font-weight: 500;
       color: #004f8c;
-      padding: 40px 0px 20px 0px;
+      padding: 0px 0px 20px 0px;
     }
 
     .section-content {
@@ -71,7 +129,7 @@
       flex-direction: column;
       width: 100%;
       padding: 0px 0px;
-      
+
       &.highlighted {
         padding: 20px;
         background: #fafafa;
@@ -134,7 +192,7 @@
           }
         }
       }
-      
+
       #phone-book-search {
         display: flex;
         flex-direction: row;
@@ -207,7 +265,9 @@
           // background: #eeeeee;
           // border: 2px solid #eceff1;
           // border: 1px solid transparent;
-          border-radius: 4px;
+          // border-radius: 4px;
+          border-radius: 15px/30px;
+
           box-shadow: 0 1rem 5rem -2rem rgba(0, 0, 0, 0.3);
 
 
@@ -335,8 +395,8 @@
             width: 100%;
             height: 30px;
             font-family: 'Comfortaa', cursive;
-            font-size: 14px;
-            line-height: 14px;
+            font-size: 12px;
+            line-height: 13px;
             font-weight: 500;
             text-align: center;
             color: white;
