--- a/projects/portal/src/styles/employee-list.less
+++ b/projects/portal/src/styles/employee-list.less
@@ -1,3 +1,7 @@
+@employee-width-grid: 100px;
+@employee-background-color-grid: white;
+@employee-border-radius-grid: 4px;
+
 @employee-avatar-width: 45px;
 @employee-avatar-height: 45px;
 
@@ -5,11 +9,75 @@
   display: flex;
   flex-direction: column;
 
+  &.grid-like {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .employee {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      width: 100%;
+      // width: @employee-width-grid;
+      // height: 50%;
+      padding: 8px;
+      box-sizing: border-box;
+      // background: @employee-background-color-grid;
+      // border-radius: @employee-border-radius-grid;
+
+      &:last-of-type {
+        border-bottom: 0px;
+      }
+
+      .avatar {
+        flex-shrink: 0;
+        width: @employee-avatar-width;
+      }
+
+      .details {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        height: 100%;
+        margin-top: 5px;
+        font-family: 'Comfortaa', cursive;
+        border-bottom: 1px solid #e0e0e0;
+
+        .name {
+          font-size: 13px;
+          line-height: 14px;
+          font-weight: 500;
+          color: #607d8b;
+          text-align: left;
+        }
+
+        .last-name {
+          font-size: 12px;
+          line-height: 12px;
+          font-weight: 600;
+          color: #607d8b;
+          text-align: left;
+        }
+
+        .description {
+          margin-top: 5px;
+          font-size: 13px;
+          line-height: 14px;
+          font-weight: 400;
+          color: #bdbdbd;
+          text-align: left;
+        }
+      }
+    }
+  }
+
   .employee {
     display: flex;
     flex-direction: row;
-    height: @employee-avatar-height;
-    margin-bottom: 10px;
+    // height: @employee-avatar-height;
+    // margin-bottom: 7px;
 
     &:last-of-type {
       margin-bottom: 0px;
