--- a/projects/portal/src/styles/employee-list.less
+++ b/projects/portal/src/styles/employee-list.less
@@ -41,9 +41,9 @@
         flex-direction: column;
         flex: 1;
         height: 100%;
-        margin-top: 5px;
+        // margin-top: 5px;
         font-family: 'Comfortaa', cursive;
-        border-bottom: 1px solid #e0e0e0;
+        // border-bottom: 1px solid #e0e0e0;
 
         .name {
           font-size: 13px;
@@ -66,7 +66,7 @@
           font-size: 13px;
           line-height: 14px;
           font-weight: 400;
-          color: #bdbdbd;
+          color: #90a4ae;
           text-align: left;
         }
       }
