--- a/projects/portal/src/styles/our-people-section.less
+++ b/projects/portal/src/styles/our-people-section.less
@@ -7,14 +7,31 @@
   align-items: flex-end;
 
   .person {
+    z-index: 1;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
     height: @our-people-person-height;
+    text-decoration: none;
     background-size: cover !important;
     background-position: top center !important;
     border-radius: 4px;
+    transition: all linear 0.15s;
+
+    &:hover {
+      z-index: 2;
+      border-radius: 8px;
+      box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2);
+      transform: scale(1.07);
+
+      .details {
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+      }
+    }
+
 
     .details {
       display: flex;
@@ -22,10 +39,12 @@
       justify-content: flex-start;
       align-items: flex-start;
       width: 100%;
+      min-height: 105px;
       padding: 20px;
+      text-decoration: none;
       background: linear-gradient(to top, rgba(27,32,48,0.5) 5%, rgba(0,0,0,0.01) 100%);
-      // border-bottom-left-radius: 8px;
-      // border-bottom-right-radius: 8px;
+      border-bottom-left-radius: 4px;
+      border-bottom-right-radius: 4px;
 
       .caption {
         font-family: 'Comfortaa', cursive;
