--- a/projects/portal/src/styles/services.less
+++ b/projects/portal/src/styles/services.less
@@ -32,3 +32,68 @@
   background: -webkit-linear-gradient(top, rgba(247, 247, 247, 1) 0%, rgba(229, 229, 229, 1) 100%);
   background: linear-gradient(to bottom, rgba(247, 247, 247, 1) 0%, rgba(229, 229, 229, 1) 100%);
 }
+
+.border-squircle(@radius-x; @radius-y) {
+  .loop(@radius-x; @radius-y; 359; 100% 0);
+}
+.loop(@radius-x; @radius-y; @counter; @list) when (@counter >= 0) {
+  @cos-x: cos(unit(@counter, deg));
+  @x: pow(abs(@cos-x), unit(@radius-x) / 100) * 50 * abs(@cos-x + 0.0000000001) / (@cos-x + 0.0000000001) + 50;
+
+  @sin-y: sin(unit(@counter, deg));
+  @y: pow(abs(@sin-y), unit(@radius-y) / 100) * 50 * abs(@sin-y + 0.0000000001) / (@sin-y + 0.0000000001) + 50;
+
+  @percent-x: percentage(round(@x, 1) / 100);
+  @percent-y: percentage(round(@y, 1) / 100);
+
+  @new-list: @percent-x @percent-y, @list;
+  .loop(@radius-x; @radius-y; (@counter - 1); @new-list);
+}
+.loop(@radius-x; @radius-y; @counter; @list) when (@counter < 0) {
+  clip-path: polygon(@list);
+}
+
+.service-link {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 90px;
+  height: 90px;
+  margin-top: 10px;
+  padding: 10px;
+  text-decoration: none;
+  border: 1px solid #eceff1;
+  // border-radius: 8px;
+  //background: #eceff1;
+  background: linear-gradient(to bottom, rgba(51, 166, 198, 1) 10%, rgba(201, 225, 237, 1) 90%);
+  .border-squircle(50%; 50%);
+
+  &:hover {
+    //border: 1px solid #cfd8dc;
+  }
+
+  .mat-icon {
+    width: 50px;
+    height: 50px;
+    font-size: 50px;
+    color: #cfd8dc;
+  }
+
+  img {
+    width: 60px;
+    height: 50px;
+  }
+
+  .service-link-caption {
+    font-family: 'Comfortaa', cursive;
+    font-size: 11px;
+    line-height: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
+    color: #b0bec5;
+  }
+}
