--- a/projects/portal/src/styles/switcher.less
+++ b/projects/portal/src/styles/switcher.less
@@ -1,24 +1,26 @@
 @switcher-height: 370px;
+@switcher-background-color: #fafafa;
 @switcher-variants-height: 70px;
-@switcher-variant-background-color: #eeeeee;
-@switcher-variant-background-color-active: #f5f5f5;
+@switcher-variant-background-color: #f5f5f5;
+@switcher-variant-background-color-active: #fafafa;
 
 .switcher {
   overflow: auto;
   display: flex;
   flex-direction: column;
   height: @switcher-height;
+  // background: @switcher-background-color;
 
   .variants {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-shrink: 0;
     height: @switcher-variants-height;
-    border-bottom: 1px dotted #eeeeee;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    // border-bottom: 1px dotted #eeeeee;
+    // border-bottom-left-radius: 8px;
+    // border-bottom-right-radius: 8px;
 
     .variant {
       display: flex;
@@ -33,17 +35,25 @@
       font-weight: 500;
       text-align: center;
       text-transform: uppercase;
-      color: #607d8b;
+      color: #90a4ae;
       // background: @switcher-variant-background-color;
-      background: #fafafa;
+      background: @switcher-variant-background-color;
       border-top-left-radius: 8px;
       border-top-right-radius: 8px;
-
+      cursor: pointer;
 
       &.active {
-        // background: @switcher-variant-background-color-active;
         height: 100% !important;
-        background: #f5f5f5;
+        background: @switcher-background-color;
+      }
+
+      .mat-icon {
+        width: 18px;
+        height: 18px;
+        margin-right: 5px;
+        margin-bottom: 3px;
+        font-size: 18px;
+        color: #90a4ae;
       }
     }
   }
@@ -51,7 +61,7 @@
   .content {
     overflow-y: auto;
     overflow-x: hidden;
-    background: #f5f5f5;
+    background: @switcher-background-color;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
   }
